[project]
name = "polyglot-cpp"
version = "0.1.0"
description = "An MCP server for compiling, running, debugging, and profiling C++ code. The polyglot bridge between C++ and AI models."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Debuggers",
]
keywords = ["mcp", "compiler", "cpp", "c++", "runner", "debugger", "profiler", "competitive programming"]
dependencies = [
    "fastmcp",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/CassiopeiaCode/Polyglot-CPP"
"Bug Tracker" = "https://github.com/CassiopeiaCode/Polyglot-CPP/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"